[package]
name = "forest-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version="0.23.0", default-features = false, features = ["glow", "wayland", "x11"]}
egui = {version = "0.23.0", default-features = false}
epaint = "0.23.0"
reqwest = {version = "0.11.22", features=['blocking', 'json']}
serde = {version = "1.0.188", features=['derive']}
serde_json = "1.0.107"
strum = "0.25.0"
strum_macros = "0.25.2"
