[package]
name = "forest-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version="0.23.0", default-features = false, features = ["glow", "wayland", "x11"]}
egui = {version = "0.23.0", default-features = false}
epaint = "0.23.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
strum = "0.25.0"
strum_macros = "0.25.2"
